--- a/requirements.txt
+++ b/requirements.txt
@@ -21,8 +21,8 @@ Flask-Moment==0.11.0
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.3
-gevent==1.3.6
-greenlet==0.4.15
+# gevent==1.3.6
+# greenlet==0.4.15
 gunicorn==20.1.0
 idna==2.7
 isort==4.3.4
