--- a/requirements.txt
+++ b/requirements.txt
@@ -1,84 +1,14 @@
-
-Automat==0.7.0
-Babel==2.6.0
-backcall==0.1.0
-backports.shutil-get-terminal-size==1.0.0
-beautifulsoup4==4.6.3
-certifi==2018.8.24
+aniso8601==6.0.0
 Click==7.0
-cloudpickle==0.5.5
-# clyent==1.2.2
-colorama==0.3.9
-dask==0.19.1
-decorator==4.3.0
-distributed==1.23.1
-entrypoints==0.2.3
-fastcache==1.0.2
-filelock==3.0.8
 Flask==1.0.3
 Flask-Cors==3.0.7
-Flask-Moment==0.11.0
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.0
-Flask-WTF==0.14.3
-# gevent==1.3.6
-# greenlet==0.4.15
-gunicorn==20.1.0
-idna==2.7
-isort==4.3.4
 itsdangerous==1.1.0
 Jinja2==2.10.1
-keyring==13.2.1
-kiwisolver==1.0.1
-lazy-object-proxy==1.3.1
-mccabe==0.6.1
-more-itertools==4.3.0
-mpmath==1.0.0
-msgpack==0.5.6
-multipledispatch==0.6.0
-networkx==2.1
-packaging==17.1
-pandocfilters==1.4.2
-prometheus-client==0.3.1
-prompt-toolkit==1.0.15
-psutil==5.4.7
-postgres==3.0.0
+MarkupSafe==1.1.1
 psycopg2-binary==2.8.2
-psycopg2-pool==1.1
-python-dateutil==2.6.0
-python-editor==1.0.4
 pytz==2019.1
-# pywin32==223
-# pywinpty==0.5.4
-# PyYAML==3.13
-# pyzmq==17.1.2
-# QtAwesome==0.4.4
-# qtconsole==4.4.1
-# QtPy==1.5.0
-requests==2.19.1
-# rope==0.11.0
-# rsa==4.7
-# ruamel-yaml==0.15.46
-# scikit-image==0.14.0
-# scikit-learn==0.19.2
-# scipy==1.1.0
-# seaborn==0.9.0
-# Send2Trash==1.5.0
-service-identity==17.0.0
-# simplegeneric==0.8.1
-# singledispatch==3.4.0.3
-# snowballstemmer==1.2.1
-sortedcollections==1.0.1
-sortedcontainers==2.0.5
-
-traitlets==4.3.2
-Twisted==18.7.0
-unicodecsv==0.14.1
-urllib3==1.23
-wcwidth==0.1.7
-webencodings==0.5.1
-Werkzeug==0.15.4
-wincertstore==0.2
-wrapt==1.10.11
-WTForms==2.3.3
-
+six==1.12.0
+SQLAlchemy==1.3.4
+Werkzeug==0.15.5
